fixed scrolling issue when sliding the y scrollbar of laupi-details
also added the new r360-core and r360-leaflet libs

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -116,7 +116,8 @@ html, body {
     padding: 7px;
     z-index: 1000;
     color: black;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 
     .map-icon-walking, .map-icon-bicycling {
 
